{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 13,
  "lineage": "c464fe23-069e-384c-b78f-43fdb29eb83d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shivani-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:internet-gateway/igw-0e0e54c73d66fd667",
            "id": "igw-0e0e54c73d66fd667",
            "owner_id": "528519205020",
            "tags": {
              "Name": "shivani-subnet",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "shivani-subnet",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "vpc_id": "vpc-0ab63b1ad5df9a57c"
          },
          "dependencies": [
            "aws_vpc.shivani-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shivani-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:route-table/rtb-0066cbc07381b50ea",
            "id": "rtb-0066cbc07381b50ea",
            "owner_id": "528519205020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0e54c73d66fd667",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shivani-route",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "shivani-route",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab63b1ad5df9a57c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.shivani-gateway",
            "aws_vpc.shivani-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shivani-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cab9d7e0ea4d17d0",
            "route_table_id": "rtb-0066cbc07381b50ea",
            "subnet_id": "subnet-00be866636e301d00"
          },
          "dependencies": [
            "aws_internet_gateway.shivani-gateway",
            "aws_route_table.shivani-route",
            "aws_subnet.shivani-subnet-1",
            "aws_vpc.shivani-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shivani-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1deb47cff6f172e",
            "route_table_id": "rtb-0066cbc07381b50ea",
            "subnet_id": "subnet-0ecff20b7d9884271"
          },
          "dependencies": [
            "aws_internet_gateway.shivani-gateway",
            "aws_route_table.shivani-route",
            "aws_subnet.shivani-subnet-2",
            "aws_vpc.shivani-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shivani-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:security-group/sg-068e3463f03bae97d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068e3463f03bae97d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230220061601580800000001",
            "name_prefix": "terraform-",
            "owner_id": "528519205020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shivani-security",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "shivani-security",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab63b1ad5df9a57c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shivani-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shivani-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:subnet/subnet-00be866636e301d00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00be866636e301d00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shivani-subnet-1",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "shivani-subnet-1",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "vpc_id": "vpc-0ab63b1ad5df9a57c"
          },
          "dependencies": [
            "aws_vpc.shivani-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shivani-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:subnet/subnet-0ecff20b7d9884271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecff20b7d9884271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shivani-subnet-2",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "shivani-subnet-2",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "vpc_id": "vpc-0ab63b1ad5df9a57c"
          },
          "dependencies": [
            "aws_vpc.shivani-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shivani-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:vpc/vpc-0ab63b1ad5df9a57c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05f52276bb2c3ab32",
            "default_route_table_id": "rtb-06fc65eef2208e1bc",
            "default_security_group_id": "sg-0b08c7e70b5657cde",
            "dhcp_options_id": "dopt-085ce0fb7e8ab7937",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab63b1ad5df9a57c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06fc65eef2208e1bc",
            "owner_id": "528519205020",
            "tags": {
              "Name": "shivani-vpc",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "shivani-vpc",
              "Owner": "shivani.sharma@cloudeq.com",
              "Purpose": "training"
            }
          }
        }
      ]
    }
  ]
}